@@ -1,3 +1,13 @@
+2001-08-31  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/compile.test: added compile-11.* interp result checks
+	* generic/tclUtil.c (TclGetIntForIndex): added Tcl_ResetResult
+	before Tcl_AppendStringsToObj to prevent shared object crash when
+	called from bcc instruction.  The Tcl_Append* calls that append to
+	the result object that are invoked by bcc insts must remember to
+	call Tcl_ResetResult because the bcc doesn't do this for us.
+	[Bug #456892]
+
 2001-08-30  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* generic/tclIndexObj.c: fixed some casting problems that upset
